--- a/index.html
+++ b/index.html
@@ -8,33 +8,39 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
   <style>
-    * {margin:0;padding:0;box-sizing:border-box;}
-    body {font-family:'Inter',sans-serif;background:#0f0f23;color:#fff;overflow-x:hidden;}
-    header {position:fixed;top:0;left:0;right:0;background:rgba(15,15,35,0.95);backdrop-filter:blur(12px);padding:12px 20px;text-align:center;z-index:1000;box-shadow:0 4px 20px rgba(0,0,0,0.4);}
-    header img {height:60px;transition:all 0.4s;}
-    header img:hover {transform:scale(1.15) rotate(5deg);}
-    .hero {position:relative;min-height:100vh;display:flex;align-items:center;justify-content:center;text-align:center;padding:140px 20px 80px;background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);overflow:hidden;}
-    #particles-js {position:absolute;top:0;left:0;width:100%;height:100%;z-index:1;}
-    .hero-content {position:relative;z-index:2;max-width:900px;padding:0 20px;}
-    .hero h1 {font-size:clamp(2.5rem,7vw,4.5rem);margin-bottom:20px;line-height:1.1;text-shadow:0 0 30px rgba(255,215,0,0.7);}
-    .hero p {font-size:1.35rem;max-width:700px;margin:0 auto 25px;opacity:0.95;line-height:1.6;}
-    .motto {font-size:clamp(2rem,6vw,3.5rem);font-weight:900;background:linear-gradient(45deg,#ffd700,#ff6b35,#4ecdc4);-webkit-background-clip:text;-webkit-text-fill-color:transparent;margin:30px 0;}
-    .btn {display:inline-block;padding:18px 40px;margin:12px;background:linear-gradient(45deg,#ffd700,#ff6b35);color:#0f0f23;font-weight:bold;border-radius:50px;font-size:1.25rem;box-shadow:0 10px 30px rgba(255,107,53,0.4);transition:all 0.4s;}
-    .btn:hover {transform:translateY(-8px) scale(1.05);box-shadow:0 20px 40px rgba(255,107,53,0.6);}
-    .btn-secondary {background:linear-gradient(45deg,#4ecdc4,#44a08d);color:#fff;}
-    .urgency {background:linear-gradient(90deg,#ff6b35,#ffd700,#4ecdc4);color:#0f0f23;padding:16px;font-weight:bold;font-size:1.3rem;text-align:center;animation:pulse 2s infinite;}
+    *{margin:0;padding:0;box-sizing:border-box;}
+    body{font-family:'Inter',sans-serif;background:#0f0f23;color:#fff;overflow-x:hidden;}
+    header{
+      position:fixed;top:0;left:0;right:0;
+      background:linear-gradient(135deg,#fdfdfb 0%,#f0f0ef 100%);
+      padding:14px 20px;text-align:center;z-index:1000;
+      box-shadow:0 4px 15px rgba(0,0,0,0.15);
+      border-bottom:2px solid #ffd700;
+    }
+    header img{height:62px;transition:all 0.4s;filter:drop-shadow(0 2px 4px rgba(0,0,0,0.2));}
+    header img:hover{transform:scale(1.15) rotate(6deg);}
+    .hero{position:relative;min-height:100vh;display:flex;align-items:center;justify-content:center;text-align:center;padding:160px 20px 80px;background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);overflow:hidden;}
+    #particles-js{position:absolute;top:0;left:0;width:100%;height:100%;z-index:1;}
+    .hero-content{position:relative;z-index:2;max-width:900px;}
+    .hero h1{font-size:clamp(2.5rem,7vw,4.5rem);margin-bottom:20px;line-height:1.1;text-shadow:0 0 30px rgba(255,215,0,0.7);}
+    .hero p{font-size:1.35rem;max-width:700px;margin:0 auto 25px;opacity:0.95;line-height:1.6;}
+    .motto{font-size:clamp(2rem,6vw,3.5rem);font-weight:900;background:linear-gradient(45deg,#ffd700,#ff6b35,#4ecdc4);-webkit-background-clip:text;-webkit-text-fill-color:transparent;margin:30px 0;}
+    .btn{display:inline-block;padding:18px 40px;margin:12px;background:linear-gradient(45deg,#ffd700,#ff6b35);color:#0f0f23;font-weight:bold;border-radius:50px;font-size:1.25rem;box-shadow:0 10px 30px rgba(255,107,53,0.4);transition:all 0.4s;}
+    .btn:hover{transform:translateY(-8px) scale(1.05);box-shadow:0 20px 40px rgba(255,107,53,0.6);}
+    .btn-secondary{background:linear-gradient(45deg,#4ecdc4,#44a08d);color:#fff;}
+    .urgency{background:linear-gradient(90deg,#ff6b35,#ffd700,#4ecdc4);color:#0f0f23;padding:16px;font-weight:bold;font-size:1.3rem;text-align:center;animation:pulse 2s infinite;}
     @keyframes pulse{0%,100%{transform:scale(1)}50%{transform:scale(1.03)}}
-    section {max-width:1100px;margin:80px auto;padding:50px 30px;background:rgba(255,255,255,0.08);backdrop-filter:blur(15px);border-radius:25px;border:1px solid rgba(255,215,0,0.2);}
-    h2 {font-size:2.5rem;text-align:center;color:#ffd700;margin-bottom:30px;}
-    .counter {font-size:clamp(3.5rem,10vw,6rem);font-weight:900;background:linear-gradient(45deg,#4ecdc4,#ffd700);-webkit-background-clip:text;-webkit-text-fill-color:transparent;text-align:center;margin:20px 0;}
-    ul {list-style:none;max-width:800px;margin:40px auto;}
-    ul li {font-size:1.25rem;margin:20px 0;padding-left:50px;position:relative;line-height:1.6;}
-    ul li::before {content:"✔";position:absolute;left:0;top:2px;font-size:2rem;color:#4ecdc4;background:linear-gradient(45deg,#ffd700,#4ecdc4);-webkit-background-clip:text;-webkit-text-fill-color:transparent;}
-    .final-cta {background:linear-gradient(135deg,#ff6b35,#ffd700);color:#0f0f23;padding:70px 30px;border-radius:30px;text-align:center;}
-    .whatsapp-float {position:fixed;bottom:30px;right:30px;width:60px;height:60px;background:#25d366;color:#fff;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:32px;box-shadow:0 5px 20px rgba(37,211,102,0.6);z-index:999;transition:all 0.3s;}
-    .whatsapp-float:hover {transform:scale(1.2);}
-    footer {background:#0f0f23;color:#ffd700;padding:40px;text-align:center;}
-    footer a {color:#4ecdc4;}
+    section{max-width:1100px;margin:80px auto;padding:50px 30px;background:rgba(255,255,255,0.08);backdrop-filter:blur(15px);border-radius:25px;border:1px solid rgba(255,215,0,0.2);}
+    h2{font-size:2.5rem;text-align:center;color:#ffd700;margin-bottom:30px;}
+    .counter{font-size:clamp(3.5rem,10vw,6rem);font-weight:900;background:linear-gradient(45deg,#4ecdc4,#ffd700);-webkit-background-clip:text;-webkit-text-fill-color:transparent;text-align:center;margin:20px 0;}
+    ul{list-style:none;max-width:800px;margin:40px auto;}
+    ul li{font-size:1.25rem;margin:20px 0;padding-left:50px;position:relative;line-height:1.6;}
+    ul li::before{content:"✔";position:absolute;left:0;top:2px;font-size:2rem;background:linear-gradient(45deg,#ffd700,#4ecdc4);-webkit-background-clip:text;-webkit-text-fill-color:transparent;}
+    .final-cta{background:linear-gradient(135deg,#ff6b35,#ffd700);color:#0f0f23;padding:70px 30px;border-radius:30px;text-align:center;}
+    .whatsapp-float{position:fixed;bottom:30px;right:30px;width:60px;height:60px;background:#25d366;color:#fff;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:32px;box-shadow:0 5px 20px rgba(37,211,102,0.6);z-index:999;transition:all 0.3s;}
+    .whatsapp-float:hover{transform:scale(1.2);}
+    footer{background:#0f0f23;color:#ffd700;padding:40px;text-align:center;}
+    footer a{color:#4ecdc4;}
   </style>
 </head>
 <body>
@@ -64,14 +70,23 @@
   <p style="text-align:center;font-size:1.3rem;color:#ffd700;">…and growing every minute. Be part of history!</p>
 </section>
 
+<!-- REFINED PROBLEM SECTION -->
 <section data-aos="fade-up">
   <h2>The Problem</h2>
-  <p style="text-align:center;font-size:1.4rem;max-width:800px;margin:0 auto 30px;">
-    Foreign AI tools are flooding our classrooms.<br>
-    They ignore our languages, our cultures, and our realities.<br>
-    <strong style="color:#ff6b35;">They were designed without a single African teacher in the room.</strong>
+  <p style="text-align:center;font-size:1.45rem;max-width:850px;margin:0 auto 35px;line-height:1.7;">
+    Right now, foreign AI is rushing straight into African classrooms — <br>skipping the teacher completely.
   </p>
-  <p style="text-align:center;font-size:1.8rem;color:#4ecdc4;font-weight:bold;">That future ends now.</p>
+  <p style="text-align:center;font-size:1.45rem;max-width:850px;margin:0 auto 35px;line-height:1.7;color:#ff6b35;font-weight:bold;">
+    That is backwards.<br>The teacher must come first.
+  </p>
+  <p style="text-align:center;font-size:1.6rem;max-width:800px;margin:35px auto;line-height:1.7;color:#4ecdc4;">
+    No AI should ever enter an African classroom<br>
+    before it has been shaped, tested, and blessed<br>
+    by African teachers themselves.
+  </p>
+  <p style="text-align:center;font-size:1.9rem;margin-top:40px;color:#ffd700;font-weight:900;">
+    That future ends now.<br>With us.
+  </p>
 </section>
 
 <section data-aos="fade-up">
@@ -109,7 +124,7 @@
   </a>
 </section>
 
-<a href="https://wa.me/254700000000?text=Hi%20TichaAfrica!" class="whatsapp-float" target="_blank">WhatsApp</a>
+<a href="https://wa.me/YOUR_WHATSAPP_NUMBER?text=Hi%20TichaAfrica!" class="whatsapp-float" target="_blank">WhatsApp</a>
 
 <footer data-aos="fade-up">
   <p>TichaAfrica © 2025 • <strong>Teach Smart, Lead Change</strong></p>
@@ -120,12 +135,7 @@
 <script>
   AOS.init({once:true,duration:1000});
   particlesJS('particles-js',{particles:{number:{value:90},color:{value:'#ffd700'},opacity:{value:0.6},size:{value:3},move:{speed:1.5}},interactivity:{events:{onhover:{enable:true,mode:'repulse'}}}});
-  
-  // Counter
-  let count=0,target=1247; // ← change 1247 to your real number anytime
-  const counterEl=document.getElementById('counter');
-  const increment=target/100;
-  const timer=setInterval(()=>{count+=increment;if(count>=target){counterEl.textContent=target.toLocaleString();clearInterval(timer);}else counterEl.textContent=Math.floor(count).toLocaleString();},30);
+  let count=0,target=1247;const c=document.getElementById('counter');const i=target/100;const t=setInterval(()=>{count+=i;if(count>=target){c.textContent=target.toLocaleString();clearInterval(t);}else c.textContent=Math.floor(count).toLocaleString();},30);
 </script>
 </body>
 </html>
